test/oscar/compiler/errors/noMainFunc.oscar
message testNow()
message testLater()

actor Tester() {
  
  receive = {
    | testLater() => {
        println("Error1");
	}
  }
}
